# finnazureflaskapp

./: .gitignore  Blob.py  CMakeLists.txt  Dockerfile  README.md  app.yaml  application.py  blob.py  docker-compose-infra.yml  docker-compose.yml  filebeat.yml  filtered_links.json  finn.html  finnazureflaskapp.conf  install_filebeat.sh  libHtml.py  links.json  logger.py  main.py  nginx.conf  parseDate.py  parse_link.py  parse_price.py  parse_sold.py  parse_visning.py  pris.json  pris_date.json  requirements.txt  start.sh  techincalDoc.odt  toHtml.py
.azure/: config
app/: blob.py  geocode.py  main.py  parseDate.py  parse_link.py  parse_price.py  parse_sold.py  parse_visning.py  requirements.txt  uwsgi.ini
app/helpers/: blob.py  htmlutil.py  jsonutil.py  logger.py  util.py
app/parsers/: parse_link.py  parse_price.py  parse_sold.py  parse_visning.py
config/prometheus/: prometheus.yml
deployments/: active
deployments/02c3c91e65504deeb29ecb2d20257aee/: status.xml
deployments/298ad02cf19c46e68c61b1e42ee3a0d4/: status.xml
deployments/395ff8e99fda482e845da9fa296ad449/: status.xml
deployments/4da5075df02b484f8742cd3e959febce/: status.xml
deployments/56d93e0c08a64b108d45f489e1d83c36/: status.xml
deployments/58bfdb30a38b4681b6a99b2817e3868e/: status.xml
deployments/732c780289e84e03b80ab68d9fd92f6b/: status.xml
deployments/77fbcb0704694cadb4871b490d7e1463/: status.xml
deployments/b53e291c377247489098e41c15cb0c2b/: manifest  status.xml
deployments/f71f5b7f973a4095b18adf796ef2b1bc/: status.xml
json/: blob_json.txt  links.json  links_week.json  multiplePris.json  pris.json  realestates.json  sold.json  visning.json
templates/: finn.html  finn_links.html  finn_price.html
utils/: Blob.py
