cmake_minimum_required(VERSION 3.8)
project(finnazureflaskapp)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        templates/finn.html
        templates/finn_links.html
        templates/finn_price.html
        venv/bin/activate
        venv/bin/activate.csh
        venv/bin/activate.fish
        venv/bin/easy_install
        venv/bin/easy_install-3.5
        venv/bin/pip
        venv/bin/pip3
        venv/bin/pip3.5
        venv/bin/python
        venv/bin/python3
        venv/lib/python3.5/site-packages/pip/_vendor/__init__.py
        venv/lib/python3.5/site-packages/pip/commands/__init__.py
        venv/lib/python3.5/site-packages/pip/commands/completion.py
        venv/lib/python3.5/site-packages/pip/commands/download.py
        venv/lib/python3.5/site-packages/pip/commands/freeze.py
        venv/lib/python3.5/site-packages/pip/commands/hash.py
        venv/lib/python3.5/site-packages/pip/commands/help.py
        venv/lib/python3.5/site-packages/pip/commands/install.py
        venv/lib/python3.5/site-packages/pip/commands/list.py
        venv/lib/python3.5/site-packages/pip/commands/search.py
        venv/lib/python3.5/site-packages/pip/commands/show.py
        venv/lib/python3.5/site-packages/pip/commands/uninstall.py
        venv/lib/python3.5/site-packages/pip/commands/wheel.py
        venv/lib/python3.5/site-packages/pip/compat/__init__.py
        venv/lib/python3.5/site-packages/pip/compat/dictconfig.py
        venv/lib/python3.5/site-packages/pip/compat/ordereddict.py
        venv/lib/python3.5/site-packages/pip/models/__init__.py
        venv/lib/python3.5/site-packages/pip/models/index.py
        venv/lib/python3.5/site-packages/pip/operations/__init__.py
        venv/lib/python3.5/site-packages/pip/operations/freeze.py
        venv/lib/python3.5/site-packages/pip/req/__init__.py
        venv/lib/python3.5/site-packages/pip/req/req_file.py
        venv/lib/python3.5/site-packages/pip/req/req_install.py
        venv/lib/python3.5/site-packages/pip/req/req_set.py
        venv/lib/python3.5/site-packages/pip/req/req_uninstall.py
        venv/lib/python3.5/site-packages/pip/utils/__init__.py
        venv/lib/python3.5/site-packages/pip/utils/appdirs.py
        venv/lib/python3.5/site-packages/pip/utils/build.py
        venv/lib/python3.5/site-packages/pip/utils/deprecation.py
        venv/lib/python3.5/site-packages/pip/utils/encoding.py
        venv/lib/python3.5/site-packages/pip/utils/filesystem.py
        venv/lib/python3.5/site-packages/pip/utils/hashes.py
        venv/lib/python3.5/site-packages/pip/utils/logging.py
        venv/lib/python3.5/site-packages/pip/utils/outdated.py
        venv/lib/python3.5/site-packages/pip/utils/setuptools_build.py
        venv/lib/python3.5/site-packages/pip/utils/ui.py
        venv/lib/python3.5/site-packages/pip/vcs/__init__.py
        venv/lib/python3.5/site-packages/pip/vcs/bazaar.py
        venv/lib/python3.5/site-packages/pip/vcs/git.py
        venv/lib/python3.5/site-packages/pip/vcs/mercurial.py
        venv/lib/python3.5/site-packages/pip/vcs/subversion.py
        venv/lib/python3.5/site-packages/pip/__init__.py
        venv/lib/python3.5/site-packages/pip/__main__.py
        venv/lib/python3.5/site-packages/pip/basecommand.py
        venv/lib/python3.5/site-packages/pip/baseparser.py
        venv/lib/python3.5/site-packages/pip/cmdoptions.py
        venv/lib/python3.5/site-packages/pip/download.py
        venv/lib/python3.5/site-packages/pip/exceptions.py
        venv/lib/python3.5/site-packages/pip/index.py
        venv/lib/python3.5/site-packages/pip/locations.py
        venv/lib/python3.5/site-packages/pip/pep425tags.py
        venv/lib/python3.5/site-packages/pip/status_codes.py
        venv/lib/python3.5/site-packages/pip/wheel.py
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/DESCRIPTION.rst
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/entry_points.txt
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/INSTALLER
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/METADATA
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/metadata.json
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/RECORD
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/top_level.txt
        venv/lib/python3.5/site-packages/pip-8.1.1.dist-info/WHEEL
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/__about__.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/__init__.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/_compat.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/_structures.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/markers.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/requirements.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/specifiers.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/utils.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/packaging/version.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/__init__.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/pyparsing.py
        venv/lib/python3.5/site-packages/pkg_resources/_vendor/six.py
        venv/lib/python3.5/site-packages/pkg_resources/extern/__init__.py
        venv/lib/python3.5/site-packages/pkg_resources/__init__.py
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/DESCRIPTION.rst
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/INSTALLER
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/METADATA
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/metadata.json
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/RECORD
        venv/lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info/WHEEL
        venv/lib/python3.5/site-packages/setuptools/command/__init__.py
        venv/lib/python3.5/site-packages/setuptools/command/alias.py
        venv/lib/python3.5/site-packages/setuptools/command/bdist_egg.py
        venv/lib/python3.5/site-packages/setuptools/command/bdist_rpm.py
        venv/lib/python3.5/site-packages/setuptools/command/bdist_wininst.py
        venv/lib/python3.5/site-packages/setuptools/command/build_ext.py
        venv/lib/python3.5/site-packages/setuptools/command/build_py.py
        venv/lib/python3.5/site-packages/setuptools/command/develop.py
        venv/lib/python3.5/site-packages/setuptools/command/easy_install.py
        venv/lib/python3.5/site-packages/setuptools/command/egg_info.py
        venv/lib/python3.5/site-packages/setuptools/command/install.py
        venv/lib/python3.5/site-packages/setuptools/command/install_egg_info.py
        venv/lib/python3.5/site-packages/setuptools/command/install_lib.py
        venv/lib/python3.5/site-packages/setuptools/command/install_scripts.py
        venv/lib/python3.5/site-packages/setuptools/command/register.py
        venv/lib/python3.5/site-packages/setuptools/command/rotate.py
        venv/lib/python3.5/site-packages/setuptools/command/saveopts.py
        venv/lib/python3.5/site-packages/setuptools/command/sdist.py
        venv/lib/python3.5/site-packages/setuptools/command/setopt.py
        venv/lib/python3.5/site-packages/setuptools/command/test.py
        venv/lib/python3.5/site-packages/setuptools/command/upload.py
        venv/lib/python3.5/site-packages/setuptools/command/upload_docs.py
        venv/lib/python3.5/site-packages/setuptools/extern/__init__.py
        venv/lib/python3.5/site-packages/setuptools/__init__.py
        venv/lib/python3.5/site-packages/setuptools/archive_util.py
        venv/lib/python3.5/site-packages/setuptools/depends.py
        venv/lib/python3.5/site-packages/setuptools/dist.py
        venv/lib/python3.5/site-packages/setuptools/extension.py
        venv/lib/python3.5/site-packages/setuptools/launch.py
        venv/lib/python3.5/site-packages/setuptools/lib2to3_ex.py
        venv/lib/python3.5/site-packages/setuptools/msvc9_support.py
        venv/lib/python3.5/site-packages/setuptools/package_index.py
        venv/lib/python3.5/site-packages/setuptools/py26compat.py
        venv/lib/python3.5/site-packages/setuptools/py27compat.py
        venv/lib/python3.5/site-packages/setuptools/py31compat.py
        venv/lib/python3.5/site-packages/setuptools/sandbox.py
        "venv/lib/python3.5/site-packages/setuptools/script (dev).tmpl"
        venv/lib/python3.5/site-packages/setuptools/script.tmpl
        venv/lib/python3.5/site-packages/setuptools/site-patch.py
        venv/lib/python3.5/site-packages/setuptools/ssl_support.py
        venv/lib/python3.5/site-packages/setuptools/unicode_utils.py
        venv/lib/python3.5/site-packages/setuptools/utils.py
        venv/lib/python3.5/site-packages/setuptools/version.py
        venv/lib/python3.5/site-packages/setuptools/windows_support.py
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/dependency_links.txt
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/DESCRIPTION.rst
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/entry_points.txt
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/INSTALLER
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/METADATA
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/metadata.json
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/RECORD
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/top_level.txt
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/WHEEL
        venv/lib/python3.5/site-packages/setuptools-20.7.0.dist-info/zip-safe
        venv/lib/python3.5/site-packages/easy_install.py
        venv/lib64/python3.5/site-packages/pip/_vendor/__init__.py
        venv/lib64/python3.5/site-packages/pip/commands/__init__.py
        venv/lib64/python3.5/site-packages/pip/commands/completion.py
        venv/lib64/python3.5/site-packages/pip/commands/download.py
        venv/lib64/python3.5/site-packages/pip/commands/freeze.py
        venv/lib64/python3.5/site-packages/pip/commands/hash.py
        venv/lib64/python3.5/site-packages/pip/commands/help.py
        venv/lib64/python3.5/site-packages/pip/commands/install.py
        venv/lib64/python3.5/site-packages/pip/commands/list.py
        venv/lib64/python3.5/site-packages/pip/commands/search.py
        venv/lib64/python3.5/site-packages/pip/commands/show.py
        venv/lib64/python3.5/site-packages/pip/commands/uninstall.py
        venv/lib64/python3.5/site-packages/pip/commands/wheel.py
        venv/lib64/python3.5/site-packages/pip/compat/__init__.py
        venv/lib64/python3.5/site-packages/pip/compat/dictconfig.py
        venv/lib64/python3.5/site-packages/pip/compat/ordereddict.py
        venv/lib64/python3.5/site-packages/pip/models/__init__.py
        venv/lib64/python3.5/site-packages/pip/models/index.py
        venv/lib64/python3.5/site-packages/pip/operations/__init__.py
        venv/lib64/python3.5/site-packages/pip/operations/freeze.py
        venv/lib64/python3.5/site-packages/pip/req/__init__.py
        venv/lib64/python3.5/site-packages/pip/req/req_file.py
        venv/lib64/python3.5/site-packages/pip/req/req_install.py
        venv/lib64/python3.5/site-packages/pip/req/req_set.py
        venv/lib64/python3.5/site-packages/pip/req/req_uninstall.py
        venv/lib64/python3.5/site-packages/pip/utils/__init__.py
        venv/lib64/python3.5/site-packages/pip/utils/appdirs.py
        venv/lib64/python3.5/site-packages/pip/utils/build.py
        venv/lib64/python3.5/site-packages/pip/utils/deprecation.py
        venv/lib64/python3.5/site-packages/pip/utils/encoding.py
        venv/lib64/python3.5/site-packages/pip/utils/filesystem.py
        venv/lib64/python3.5/site-packages/pip/utils/hashes.py
        venv/lib64/python3.5/site-packages/pip/utils/logging.py
        venv/lib64/python3.5/site-packages/pip/utils/outdated.py
        venv/lib64/python3.5/site-packages/pip/utils/setuptools_build.py
        venv/lib64/python3.5/site-packages/pip/utils/ui.py
        venv/lib64/python3.5/site-packages/pip/vcs/__init__.py
        venv/lib64/python3.5/site-packages/pip/vcs/bazaar.py
        venv/lib64/python3.5/site-packages/pip/vcs/git.py
        venv/lib64/python3.5/site-packages/pip/vcs/mercurial.py
        venv/lib64/python3.5/site-packages/pip/vcs/subversion.py
        venv/lib64/python3.5/site-packages/pip/__init__.py
        venv/lib64/python3.5/site-packages/pip/__main__.py
        venv/lib64/python3.5/site-packages/pip/basecommand.py
        venv/lib64/python3.5/site-packages/pip/baseparser.py
        venv/lib64/python3.5/site-packages/pip/cmdoptions.py
        venv/lib64/python3.5/site-packages/pip/download.py
        venv/lib64/python3.5/site-packages/pip/exceptions.py
        venv/lib64/python3.5/site-packages/pip/index.py
        venv/lib64/python3.5/site-packages/pip/locations.py
        venv/lib64/python3.5/site-packages/pip/pep425tags.py
        venv/lib64/python3.5/site-packages/pip/status_codes.py
        venv/lib64/python3.5/site-packages/pip/wheel.py
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/DESCRIPTION.rst
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/entry_points.txt
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/INSTALLER
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/METADATA
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/metadata.json
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/RECORD
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/top_level.txt
        venv/lib64/python3.5/site-packages/pip-8.1.1.dist-info/WHEEL
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/__about__.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/__init__.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/_compat.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/_structures.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/markers.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/requirements.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/specifiers.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/utils.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/packaging/version.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/__init__.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/pyparsing.py
        venv/lib64/python3.5/site-packages/pkg_resources/_vendor/six.py
        venv/lib64/python3.5/site-packages/pkg_resources/extern/__init__.py
        venv/lib64/python3.5/site-packages/pkg_resources/__init__.py
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/DESCRIPTION.rst
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/INSTALLER
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/METADATA
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/metadata.json
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/RECORD
        venv/lib64/python3.5/site-packages/pkg_resources-0.0.0.dist-info/WHEEL
        venv/lib64/python3.5/site-packages/setuptools/command/__init__.py
        venv/lib64/python3.5/site-packages/setuptools/command/alias.py
        venv/lib64/python3.5/site-packages/setuptools/command/bdist_egg.py
        venv/lib64/python3.5/site-packages/setuptools/command/bdist_rpm.py
        venv/lib64/python3.5/site-packages/setuptools/command/bdist_wininst.py
        venv/lib64/python3.5/site-packages/setuptools/command/build_ext.py
        venv/lib64/python3.5/site-packages/setuptools/command/build_py.py
        venv/lib64/python3.5/site-packages/setuptools/command/develop.py
        venv/lib64/python3.5/site-packages/setuptools/command/easy_install.py
        venv/lib64/python3.5/site-packages/setuptools/command/egg_info.py
        venv/lib64/python3.5/site-packages/setuptools/command/install.py
        venv/lib64/python3.5/site-packages/setuptools/command/install_egg_info.py
        venv/lib64/python3.5/site-packages/setuptools/command/install_lib.py
        venv/lib64/python3.5/site-packages/setuptools/command/install_scripts.py
        venv/lib64/python3.5/site-packages/setuptools/command/register.py
        venv/lib64/python3.5/site-packages/setuptools/command/rotate.py
        venv/lib64/python3.5/site-packages/setuptools/command/saveopts.py
        venv/lib64/python3.5/site-packages/setuptools/command/sdist.py
        venv/lib64/python3.5/site-packages/setuptools/command/setopt.py
        venv/lib64/python3.5/site-packages/setuptools/command/test.py
        venv/lib64/python3.5/site-packages/setuptools/command/upload.py
        venv/lib64/python3.5/site-packages/setuptools/command/upload_docs.py
        venv/lib64/python3.5/site-packages/setuptools/extern/__init__.py
        venv/lib64/python3.5/site-packages/setuptools/__init__.py
        venv/lib64/python3.5/site-packages/setuptools/archive_util.py
        venv/lib64/python3.5/site-packages/setuptools/depends.py
        venv/lib64/python3.5/site-packages/setuptools/dist.py
        venv/lib64/python3.5/site-packages/setuptools/extension.py
        venv/lib64/python3.5/site-packages/setuptools/launch.py
        venv/lib64/python3.5/site-packages/setuptools/lib2to3_ex.py
        venv/lib64/python3.5/site-packages/setuptools/msvc9_support.py
        venv/lib64/python3.5/site-packages/setuptools/package_index.py
        venv/lib64/python3.5/site-packages/setuptools/py26compat.py
        venv/lib64/python3.5/site-packages/setuptools/py27compat.py
        venv/lib64/python3.5/site-packages/setuptools/py31compat.py
        venv/lib64/python3.5/site-packages/setuptools/sandbox.py
        "venv/lib64/python3.5/site-packages/setuptools/script (dev).tmpl"
        venv/lib64/python3.5/site-packages/setuptools/script.tmpl
        venv/lib64/python3.5/site-packages/setuptools/site-patch.py
        venv/lib64/python3.5/site-packages/setuptools/ssl_support.py
        venv/lib64/python3.5/site-packages/setuptools/unicode_utils.py
        venv/lib64/python3.5/site-packages/setuptools/utils.py
        venv/lib64/python3.5/site-packages/setuptools/version.py
        venv/lib64/python3.5/site-packages/setuptools/windows_support.py
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/dependency_links.txt
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/DESCRIPTION.rst
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/entry_points.txt
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/INSTALLER
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/METADATA
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/metadata.json
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/RECORD
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/top_level.txt
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/WHEEL
        venv/lib64/python3.5/site-packages/setuptools-20.7.0.dist-info/zip-safe
        venv/lib64/python3.5/site-packages/easy_install.py
        venv/share/python-wheels/CacheControl-0.11.5-py2.py3-none-any.whl
        venv/share/python-wheels/chardet-2.3.0-py2.py3-none-any.whl
        venv/share/python-wheels/colorama-0.3.7-py2.py3-none-any.whl
        venv/share/python-wheels/distlib-0.2.2-py2.py3-none-any.whl
        venv/share/python-wheels/html5lib-0.999-py2.py3-none-any.whl
        venv/share/python-wheels/ipaddress-0.0.0-py2.py3-none-any.whl
        venv/share/python-wheels/lockfile-0.12.2-py2.py3-none-any.whl
        venv/share/python-wheels/packaging-16.6-py2.py3-none-any.whl
        venv/share/python-wheels/pip-8.1.1-py2.py3-none-any.whl
        venv/share/python-wheels/pkg_resources-0.0.0-py2.py3-none-any.whl
        venv/share/python-wheels/progress-1.2-py2.py3-none-any.whl
        venv/share/python-wheels/pyparsing-2.0.3-py2.py3-none-any.whl
        venv/share/python-wheels/requests-2.9.1-py2.py3-none-any.whl
        venv/share/python-wheels/retrying-1.3.3-py2.py3-none-any.whl
        venv/share/python-wheels/setuptools-20.7.0-py2.py3-none-any.whl
        venv/share/python-wheels/six-1.10.0-py2.py3-none-any.whl
        venv/share/python-wheels/urllib3-1.13.1-py2.py3-none-any.whl
        venv/share/python-wheels/wheel-0.29.0-py2.py3-none-any.whl
        venv/pyvenv.cfg
        application.py
        finn.html
        LICENSE
        links.json
        parse_link.py
        parse_price.py
        parseDate.py
        pris.json
        pris_date.json
        README.md
        requirements.txt
        toHtml.py)

add_executable(finnazureflaskapp ${SOURCE_FILES})